<resources>

    <string name="app_name">Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="back">返回</string>
    <string name="loading">载入中</string>
    <string name="praise">赞</string>
    <string name="comment">评论</string>
    <string name="view">浏览</string>
    <string name="publish">发表</string>
    <string name="map_menu_loc">周边</string>
    <string name="map_menu_nav">导航</string>
    <string name="map_menu_search">搜索</string>
    <string name="login_text_email">邮箱：</string>
    <string name="login_text_password">密码：</string>
    <string name="register_text_nickname">昵称：</string>
    <string name="register_text_email">常用邮箱:</string>
    <string name="register_text_password">密码:</string>
    <string name="register_text_confirm_password">确认密码:</string>
    <string name="register_text_birthday">生日:</string>
    <string name="register_text_phone">手机号:</string>
    <string name="register_text_car">我有自己的车:</string>
    <string name="register_vehicle_manufacturer">厂商:</string>
    <string name="register_vehicle_model">型号:</string>
    <string name="register_vehicle_color">颜色:</string>
    <string name="register_vehicle_number">车牌号（选填）:</string>
    <string name="takephoto">拍照</string>
    <string name="send">发送</string>
    <string name="album">本地相册</string>
    <string name="cancle">取消</string>
    <string name="register_cutphoto_text">裁剪</string>
    <string name="report_cop">警察</string>
    <string name="report_collapse">塌方</string>
    <string name="report_jam">堵车</string>
    <string name="report_limit">限行</string>
    <string name="report_danger">危险</string>
    <string name="report_work">施工</string>
    <string name="report_monitoring">监控</string>
    <string name="report_accident">事故</string>
    <string name="report_sign">签到</string>
    <string name="report_detail_hint">分享详情……</string>
    <string name="report_detail_photo_added">已添加照片</string>
    <string name="map_per_title">周边</string>
    <string name="map_per_gas">加油</string>
    <string name="map_per_park">停车场</string>
    <string name="map_per_atm">取款机/银行</string>
    <string name="map_per_res">餐馆</string>
    <string name="map_per_police">警局</string>
    <string name="map_per_market">便利店</string>
    <string name="map_per_wash">洗车</string>
    <string name="map_per_hotel">旅馆</string>
    <string name="map_per_hos">医院</string>
    <string name="map_per_fix">修车</string>
    <string name="map_nav_title">导航</string>
    <string name="map_nav_start">输入起点……</string>
    <string name="map_nav_end">输入终点……</string>
    <string name="trip_title">车载</string>
    <string name="trip_title_nbs">同行小伙伴</string>
    <string name="trip_title_mate">队友</string>
    <string name="trip_title_blog">游记你我他</string>
    <string name="trip_title_des">先知万里路</string>
    <string name="nbs_meet">相遇</string>
    <string name="nbs_times">次</string>
    <string name="nbs_send">发送组队请求</string>
    <string name="blog_title">个人主页</string>
    <string name="blog_pic_fail">加载图片失败了~</string>
    <string name="trip_title_edit">发表日志</string>
    <string name="activ_blog_edit_content">说点儿什么吧~</string>
    <string name="activ_blog_edit_wordnum">200</string>
	<string name="blog_privacy_set">隐私设置:</string>
	<string name="activ_blog_edit_authshow">所有人可见</string>
	<string name="activ_blog_edit_location">显示所在位置</string>
	<string name="activ_blog_edit_friendhow">好友可见</string>
	<string name="activ_blog_edit_attentionshow">关注人可见</string>
	<string name="activ_blog_edit_selfshow">仅自己可见</string>
	<string name="activ_blog_edit_topic">日志标题</string>
    
    

</resources>