<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/report_ll_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <LinearLayout
            android:id="@+id/report_ll_menu_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_title"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_report_menu_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/report_ll_menu_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_report_menu_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                
                <!-- 监听加给FrameLayout -->

                <FrameLayout
                    android:id="@+id/report_menu_fl_cop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_cop" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_cop"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_collapse" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_collapse"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_jam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_jam" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_jam"
                        android:textColor="#000000"
                        android:layout_marginLeft="2dp"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_limit" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_limit"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <FrameLayout
                    android:id="@+id/report_menu_fl_monitoring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_monitoring" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_monitoring"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_accident"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_accident" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_accident"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_sign" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/report_sign"
                        android:textColor="#000000"
                        android:layout_marginLeft="2dp"
                        android:textSize="16sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/report_menu_fl_zhanwei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_report_zhanwei" >
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>