<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#efefed"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/nav_rlt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main_title" >

        <Button
            android:id="@+id/nav_top_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_top_back"
            android:text="@string/back"
            android:textColor="#ffffff" />

        <LinearLayout
            android:id="@+id/nav_ll_centerLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/nav_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/map_nav_title"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/nav_top_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_top_search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#efefed"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                

                <EditText
                    android:id="@+id/start_et_nav"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textfield_map_nav"
                    android:ems="10"
                    android:hint="@string/map_nav_start" >

                    <requestFocus />
                </EditText>
                <Button
                    android:id="@+id/start_btn_nav_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/btn_cancle_map_nav" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                <EditText
                    android:id="@+id/end_et_nav"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textfield_map_nav"
                    android:hint="@string/map_nav_end" />

                <Button
                    android:id="@+id/end_btn_nav_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/btn_cancle_map_nav" />
            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/change_btn_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_change_map_nav" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cbcaca" />
    
    <!-- 下面的list装入 item_map_nav_recent-->

    <ListView
        android:id="@+id/recent_lv_nav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#ffffff"
        android:divider="#cbcaca"
        android:overScrollMode="always"
        android:scrollbars="none" >
    </ListView>

</LinearLayout>